--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3.8"
 
 services:
+  # -------------------------------------------------
+  # 🧰 Jenkins – CI/CD Controller
+  # -------------------------------------------------
   jenkins:
     build:
       context: .
       dockerfile: Dockerfile.jenkins
     container_name: jenkins
+    user: root
     ports:
       - "8090:8080"
       - "50000:50000"
@@ -16,29 +20,41 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
+      - DOCKER_HOST=tcp://host.docker.internal:2375
     networks:
       - portfolio_net
 
+  # -------------------------------------------------
+  # 🪄 Terraform – Infra as Code
+  # -------------------------------------------------
   terraform:
-    image: hashicorp/terraform:1.6.6
+    image: alpine:latest
     container_name: terraform
-    command: sleep infinity
     working_dir: /workspace
     volumes:
       - ./terraform:/workspace
+    command: >
+      sh -c "apk add --no-cache terraform bash && while true; do sleep 3600; done"
     networks:
       - portfolio_net
 
+  # -------------------------------------------------
+  # ☁️ AWS CLI – For S3 Uploads & CloudFront
+  # -------------------------------------------------
   awscli:
-    image: amazon/aws-cli:2.15.0
+    image: alpine:latest
     container_name: awscli
-    command: sleep infinity
     working_dir: /workspace
     volumes:
       - ./website:/workspace
+    command: >
+      sh -c "apk add --no-cache aws-cli bash && while true; do sleep 3600; done"
     networks:
       - portfolio_net
 
+# -------------------------------------------------
+# 🔐 Volumes & Network
+# -------------------------------------------------
 volumes:
   jenkins_home:
 
